--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -574,6 +574,7 @@ a:focus {
   right: 10%;
   text-align: right;
   width: 80%;
+  z-index: 1;
 }
 
 .home-slider .carousel-indicators li {
@@ -649,698 +650,3 @@ a:focus {
   background-position: center center;
 }
 /** HOMEPAGE CSS END **/
-
-
-
-
-
-
-
-
-
-/* ----------------------- */
-/* ---- Media Queries ---- */
-/* ----------------------- */
-@media screen and (max-width: 1200px) {
-  /** HOMEPAGE CSS START **/
-  .home-slider .carousel-caption p {
-    font-size: 42px;
-  }
-  .home-slider .carousel-caption span {
-    font-size: 50px;
-  }
-  .custom-navbar .navbar-nav > li > a {
-    padding: 35px 20px;
-  }
-  .custom-navbar .navbar-nav > .active > a::after {
-    right: 5px;
-  }
-  .custom-navbar .navbar-nav > .active > a::before {
-    left: 5px;
-  }
-  .home-slider .carousel-indicators {
-    bottom: 58%;
-    right: 5%;
-  }
-  /** HOMEPAGE CSS END **/
-
-   /*feedback css*/
-   .feedback-img-wrap:after, .feedback-img-wrap:before, .feedback-img-wrap:after, .feedback-img-wrap:before {
-    height: 80px;
-    width: 80px;
-  }
-  .feedback-img-wrap{
-    padding: 20px;
-  }
-  .feedback-content-wrap{
-    padding-top:20px;
-    padding-left: 30px;
-  }
-
-  /*video-gallery css*/
-  .video-wrap .video-react-big-play-button{
-    height: 2em;
-    line-height: 2em;
-    width: 2em;
-  }
-  .video-title{
-    font-size: 22px;
-  }
-  /* about us css*/
-  .about-img-wrap:after{
-    right: 0;
-  }
-}
-@media screen and (max-width: 1024px) {
-  /** HOMEPAGE CSS START **/
-  .custom-navbar .navbar-nav > li > a {
-    padding: 35px 15px;
-    font-size: 14px;
-  }
-  .custom-navbar .navbar-nav > .active > a::before {
-    left: 0;
-  }
-  .custom-navbar .navbar-nav > .active > a::after {
-    right: 0;
-  }
-  /** HOMEPAGE CSS END **/
-}
-@media screen and (max-width: 991px) {
-  /** NAVBAR BREAKPOINT **/
-  .custom-navbar {
-    min-height: 85px;
-  }
-  .custom-navbar .navbar-header {
-    float: none;
-    min-height: 80px;
-  }
-  .custom-navbar .navbar-left,
-  .custom-navbar .navbar-right {
-    float: none !important;
-  }
-  .custom-navbar .navbar-toggle {
-    display: block;
-    border-color: #f9a11d;
-    margin-top: 25px;
-    margin-right: 20px;
-    margin-bottom: 0;
-    padding: 7px;
-  }
-  .custom-navbar .navbar-toggle:focus,
-  .custom-navbar .navbar-toggle:hover {
-    background-color: transparent;
-  }
-  .navbar-default .navbar-toggle .icon-bar {
-    background-color: #f9a11d;
-  }
-  .custom-navbar .navbar-collapse {
-    border-top: 1px solid transparent;
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
-  }
-  .custom-navbar .navbar-fixed-top {
-    top: 0;
-    border-width: 0 0 1px;
-  }
-  .custom-navbar .navbar-collapse.collapse {
-    display: none !important;
-  }
-  .custom-navbar .navbar-nav {
-    float: none !important;
-    margin-top: 7.5px;
-  }
-  .custom-navbar .navbar-nav > li {
-    float: none;
-  }
-  .custom-navbar .navbar-nav > li > a {
-    padding-top: 0px;
-    padding-bottom: 10px;
-  }
-  .custom-navbar .collapse.in {
-    display: block !important;
-  }
-  .custom-navbar .dropdown-menu {
-    position: static;
-    float: none;
-    width: auto;
-    margin-top: 0;
-    background-color: transparent;
-    border: 0;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-  }
-  .custom-navbar .navbar-nav > .active > a {
-    color: #f9a11d;
-  }
-  .custom-navbar .navbar-nav > .active > a::before {
-    background-image: none;
-  }
-  .custom-navbar .navbar-nav > .active > a::after {
-    background-image: none;
-  }  
-
-  .header.navbar{
-    background-color: rgba(0, 0, 0, 0.85);
-  }
-  .header .menu-links li a{
-    padding: 10px 15px;
-  }
-  .header .menu-links li.active a{
-    color: #f9a11d !important;
-    text-decoration: underline; 
-  }
-  .header .menu-links li.active a:before,
-  .header .menu-links li.active a:after{
-    display: none;
-  }
-  .custom-navbar .collapse.in {
-    display: block !important;
-  }
-  .header .contact-header-links ul{
-    margin-top: 0px !important;
-  }
-  .header .menu-links li a .caret{
-    color: #fff;
-    position: relative;
-  }
-  .header .menu-links li a .caret:hover,
-  .header .menu-links li a .caret:focus{
-    color: #fff;
-  }
-  /** NAVBAR BREAKPOINT **/
-  /** HOMEPAGE CSS START **/
-  .home-slider .carousel-caption p {
-    font-size: 38px;
-  }
-  .home-slider .carousel-caption p::before,
-  .home-slider .carousel-caption p::after {
-    font-size: 52px;
-  }
-  .home-slider .carousel-caption p {
-    font-size: 38px;
-  }
-  .home-slider .carousel-caption span {
-    font-size: 46px;
-  }
-  /** HOMEPAGE CSS END **/ 
-  /*video-gallery css*/
-  .video-wrap .video-react-big-play-button{
-    height: 1.6em;
-    line-height: 1.6em;
-    width: 1.6em;
-    margin-left:-0.6em !important;
-  }
-  .video-title{
-    font-size: 20px;
-  }
-
-  /* get-in-touch css */
-  .contact-submit-btn{
-    min-width: 150px;    
-  }
-
-  /* service css */
-  .service-wrap{
-    padding-bottom: 40px;
-  }
-  .service-thumb-wrap{
-    width: calc(50% - 30px);
-  }
-  .service-btn {
-    padding: 6px 0px !important;
-    margin: 10px 0 5px;
-    min-width: 150px;
-    min-height: 35px;
-    font-size: 13px !important;
-  }
-  /*portfolio css */
-  .portfolio-custom-tabs.nav-tabs > li, .nav-pills > li{
-    padding: 0 10px 0 10px;
-  }
-  .portfolio-thumbs-wrap{
-    width: 50%;
-    display: inline-block;
-  }
-  /* about css*/
-  .about-title{
-    font-size: 22px;
-    line-height: 26px;
-  }    
-  .about-details-wrap{
-    font-size: 14px;
-    line-height: 22px;
-  }
-  /*feedback css*/
-
-  .feedback-content-wrap{
-    padding-top:0px;
-    padding-left: 20px;
-  }
-  .feedback-title{
-    padding-top:0;
-    font-size: 20px;
-    margin-bottom: 0;
-    margin-top:0;
-  }
-  .feedback-rating{
-    margin-top: 0px;
-  }
-  .feedback-img-wrap{
-    padding: 15px;
-  }
-  .feedback-img-wrap:after, .feedback-img-wrap:before, .feedback-img-wrap:after, .feedback-img-wrap:before {
-    height: 60px;
-    width: 60px;
-  } 
-}
-@media only screen and (max-width: 768px) {
-  .page-main-title h1 {
-    font-size: 25px;
-  }
-  .page-main-title label:after {
-    position: absolute;
-    content: "]";
-    top: -2px;
-    right: -20px;
-  }
-  .page-main-title label:before {
-    position: absolute;
-    content: "[";
-    top: -2px;
-    left: -20px;
-  }
-}
-@media screen and (max-width: 767px) {
-  /** HOMEPAGE CSS START **/
-  .custom-navbar .navbar-toggle {
-    margin-right: 25px;
-  }
-  .custom-footer {
-    text-align: center;
-    max-height: 55px;
-    line-height: 20px;
-  }
-  .custom-footer,
-  .page-wrap::after {
-    height: 55px;
-  }
-  .custom-footer .text-right {
-    text-align: center;
-  }
-  .home-slider .slider-btn {
-    font-size: 13px;
-    min-width: 160px;
-    min-height: 35px;
-  }
-  .home-slider .custom-carousel-caption {
-    left: 3%;
-    top: 35%;
-  }
-  .home-slider .carousel-caption p::before,
-  .home-slider .carousel-caption p::after {
-    font-size: 32px;
-  }
-  .home-slider .carousel-caption p {
-    font-size: 28px;
-  }
-  .home-slider .carousel-caption span {
-    font-size: 32px;
-  }
-  .home-slider .carousel-indicators li {
-    height: 20px;
-    top: -35px;
-  }
-  .home-slider .carousel-indicators li:nth-child(1) {
-    top: 0px;
-  }
-  .home-slider .carousel-indicators li:nth-child(2) {
-    top: 35px;
-  }
-  .home-slider .carousel-indicators li:nth-child(3) {
-    top: 70px;
-  }
-  .home-slider .carousel-indicators li:nth-child(4) {
-    top: 105px;
-  }
-  .home-slider .carousel-indicators li:nth-child(5) {
-    top: 140px;
-  }
-  /** HOMEPAGE CSS END **/  
-  /*main page css*/
-  .page-main-title{
-    margin-top: 40px;
-  }
-  .page-main-title h1{
-    font-size: 24px;
-    line-height: 30px;
-  }
-  .page-main-title label:after{
-    position: absolute;
-    content: "]";      
-    right: -20px;
-    font-size: 32px;
-    line-height: 32px;
-  }
-  .page-main-title label:before{
-    position: absolute;
-    content: "["; 
-    left: -20px;
-    font-size: 32px;
-    line-height: 32px;      
-  }
-  /** PORTFOLIO CSS START **/
-  .portfolio-custom-tabs.nav-tabs > li,
-  .nav-pills > li {
-    padding: 0;
-  }
-  .portfolio-custom-tabs {
-    width: 100%;
-    margin-left: 0;
-  }
-  /** PORTFOLIO CSS END **/
-  /** FEEDBACK CSS START **/
-  .feedback-wrap{
-    padding-bottom: 40px;
-  }  
-  .feedback-content-wrap {
-    padding: 30px 0;
-    text-align: justify;
-  }
-  .feedback-img-wrap {
-    width: 50%;
-    margin-left: 25%;
-  }
-
-  .feedback-title {
-    padding-top: 0;
-    margin-top: 0;
-    text-align: center;
-  }
-  .feedback-img-wrap:after,
-  .feedback-img-wrap:before,
-  .feedback-img-wrap:after,
-  .feedback-img-wrap:before {
-    height: 60px;
-    width: 60px;
-  }
-  .feedback-carousel .carousel-indicators {
-    bottom: -20px;
-  }
-  .feedback-item {
-    padding: 10px 25px;
-  }
-  .feedback-rating{
-    margin-top: 0px;
-    width: 100%;
-    text-align: center;
-  }
-  /** FEEDBACK CSS END **/
-  /* VIDEO GALLERY CSS START */
-  .video-gallery-wrap .page-main-title{
-    margin-top: 30px;
-    margin-bottom: 0;
-  }
-  .video-gallery-wrap .page-main-title h1{
-    margin: 0;
-  }
-  .video-wrap .video-react-big-play-button {
-    height: 1.4em;
-    line-height: 1.4em;
-    width: 1.4em;
-    font-size: 2.6em;
-    margin-left: -0.9em !important;
-  }
-  .video-title {
-    font-size: 18px;
-    padding: 3px 6px;    
-  }
-  .video-wrap .video-icons{
-    right: 25px;
-  }
-  /* VIDEO GALLERY CSS END */
-  /* ABOUT CSS START */
-  .about-wrap .page-main-title{
-    margin-bottom: 0;
-  }
-  .about-wrap .page-main-title h1{
-    margin-top: 0; 
-  }
-  .about-img-wrap {
-    width: 50%;
-    margin-left: 25%;
-  }
-  .about-title {
-    text-align: center;
-    line-height: 28px;
-    margin-bottom: 10px;
-  }
-  .about-details-wrap {
-    text-align: justify;
-    padding: 0;
-    padding-bottom: 10px;
-  }
-  .about-details-wrap:after{
-    width: 60%;
-    height: 2px;
-    left: calc(50% - 30%);
-  }
-  .media-link {
-    height: 35px;
-    width: 35px;
-    font-size: 18px;
-    line-height: 36px;
-  }
-  .media-icons {
-    text-align: center;
-  }
-  .hire-wrap {
-    text-align: center;
-  }
-  .about-title {
-    font-size: 22px;
-  }
-  /* ABOUT CSS END */
-  /* GET IN TOUCH CSS START */
-  .get-in-touch-wrap .contact-detail-wrap{
-    max-width: 320px;
-    display: block;
-    margin: 0 auto; 
-  }
-  .get-in-touch-wrap .contact-form-wrap{
-    max-width: 420px;
-    display: block;
-    margin: 0 auto; 
-  }
-  .contact-form{
-    position: relative;
-    float: left;
-    width: 100%;
-    margin-top: 30px;
-  }
-  .contact-logo{
-    margin: 0 auto 30px;
-  }
-  .AdminApp .header .container{
-    padding-left: 15px !important;
-  }
-  /* GET IN TOUCH CSS END */
-  /* service css*/
-  .service-thumb-wrap {
-    width: 100%;
-    margin: 0;
-  }
-  /*portfolio css */
-  .portfolio-wrap .page-header{
-    margin-bottom: 0;
-  }
-  .portfolio-thumbs-wrap{
-    width: 50%;
-    display: inline-block;
-  }
-}
-@media screen and (max-width: 640px) {
-  .page-inner-wrap{
-    padding-bottom: 60px;
-  }
-  /** HOMEPAGE CSS START **/
-  .custom-navbar {
-    min-height: 70px;
-  }
-  .custom-navbar .navbar-toggle {
-    margin-right: 20px;
-    margin-top: 25px;
-    padding: 7px;
-  }
-  .custom-navbar .navbar-header {
-    min-height: 70px;
-  }
-  .custom-navbar .navbar-logo img {
-    max-width: 170px;
-  }
-  .home-slider .slider-btn {
-    font-size: 12px;
-    min-height: 35px;
-    min-width: 140px;
-  }
-  .home-slider .carousel-caption p::before,
-  .home-slider .carousel-caption p::after {
-    font-size: 28px;
-  }
-  .home-slider .carousel-caption p::before {
-    content: "[";
-    margin-right: 10px;
-  }
-  .home-slider .carousel-caption p::after {
-    content: "]";
-    margin-left: 10px;
-  }
-  .home-slider .carousel-indicators {
-    bottom: 65%;
-    right: 5%;
-  }
-  .home-slider .carousel-indicators li:nth-child(1) {
-    top: -5px;
-  }
-  .home-slider .carousel-indicators li:nth-child(2) {
-    top: 25px;
-  }
-  .home-slider .carousel-indicators li:nth-child(3) {
-    top: 55px;
-  }
-  .home-slider .carousel-indicators li:nth-child(4) {
-    top: 85px;
-  }
-  .home-slider .carousel-indicators li:nth-child(5) {
-    top: 115px;
-  }
-  .home-slider .carousel-caption p {
-    font-size: 24px;
-  }
-  .home-slider .carousel-caption span {
-    font-size: 28px;
-  }
-  /** HOMEPAGE CSS END **/
-  /* footer css */
-  .footer {
-    min-height: 50px;
-    height: 50px;
-    padding: 3px;
-  }
-  .page-wrap{
-    margin-bottom: -50px;
-  }
-  .copyright, .design-by{
-    width:100%;
-    text-align: center;
-    font-size: 11px;
-  }
-  /* contact css*/
-  /* service css*/
-  .service-title{
-    font-size: 15px;
-  }    
-  .service-description{
-    font-size: 13px;
-    line-height: 18px;
-  }
-  /*portfolio css */
-  .portfolio-thumbs-wrap{
-    width: 100%;
-    display: block;
-    float: left;
-    position: relative;
-  }
-}
-@media only screen and (max-width: 540px) {
-  /*Feedback css*/
-  .feedback-img-wrap {
-    width: 70%;
-    margin-left: 15%;
-  }
-  /*video-gallery css*/
-  .video-title {
-    font-size: 16px;
-  }
-  /*about css*/
-  .about-img-wrap {
-    width: 70%;
-    margin-left: 15%;
-  }
-  .about-title {
-    font-size: 20px;
-  }
-}
-@media only screen and (max-width: 480px) {
-  /*service css */
-   .nav-tabs>li>a{
-     font-size: 12px;
-     padding: 10px;
-   }
- }
-@media screen and (max-width: 479px) {
-  /*** HOMEPAGE CSS START***/
-  .home-slider .carousel-caption p {
-    font-size: 20px;
-  }
-  .home-slider .carousel-caption span {
-    font-size: 24px;
-  }
-  .home-slider .carousel-caption p::before,
-  .home-slider .carousel-caption p::after {
-    font-size: 24px;
-  }
-  .home-slider .carousel-caption p::before {
-    margin-right: 5px;
-  }
-  .home-slider .carousel-caption p::after {
-    margin-left: 10px;
-  }
-  .home-slider .slider-btn {
-    font-size: 11px;
-    min-width: 130px;
-  }
-  .custom-footer {
-    font-size: 11px;
-  }
-  /*** HOMEPAGE CSS END***/
-}
-@media only screen and (max-width: 460px) {
-   /*header css */
-   .header.navbar .navbar-brand img{
-    max-width: 220px;
-    margin: 5px 0;
-  }
-  /*feedback css*/
-  .feedback-img-wrap{
-    padding: 15px;
-    width: 100%;
-    margin-left: 0;
-  }
-  /*about css*/
-  .about-img-wrap{
-    width: 100%;
-    margin-left: 0;
-  }
-  .about-title{
-    font-size: 20px;
-  }
-  /* service css*/
-  .service-thumbs{
-    padding: 10px;
-  }  
-}
-@media screen and (max-width: 360px) {
-  /*** HOMEPAGE CSS START***/
-  .custom-footer .custom-container {
-    padding: 0;
-  }
-  .custom-footer .content {
-    padding: 0;
-  }
-  /*** HOMEPAGE CSS END***/
-  .portfolio-custom-tabs.nav-tabs > li{
-    width: 50%;
-  }
-  .portfolio-links.active a{
-    border-bottom: 0px !important;
-  }
-}
