--- a/src/assets/css/admin/admin.css
+++ b/src/assets/css/admin/admin.css
@@ -4,6 +4,7 @@
   position: relative;
   float: left;
   width: 100%;
+  margin-bottom: -30px;
 }
 .AdminApp .footer {
   position: relative;
@@ -92,6 +93,9 @@
 .AdminApp .header .menu-links li a {
   color: #555555 !important;
 }
+.AdminApp .header .menu-links li a img{
+  margin-right: 5px;
+}
 .AdminApp .header .admin-setting ul {
   background-color: #fff;
   margin-top: 15px !important;
@@ -138,345 +142,4 @@
   outline: 0;
   border: 0;
   border-right: 1px solid #f1f1f1 !important;
-}
-
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-  body.modal-open {
-    overflow: hidden !important;
-  }
-}
-
-/*Media queries*/
-@media only screen and (max-width: 1200px) {
-}
-@media only screen and (max-width: 1130px) {
-  .photo-wrap,
-  .view-count-wrap,
-  .status-wrap,
-  .visible-wrap {
-    width: 50%;
-    padding: 0;
-  }
-  .count-detail {
-    width: auto;
-  }
-  .count-num,
-  .visible-wrap .count-num {
-    margin-top: 0;
-    margin-left: 8px;
-  }
-  .count-wrap:nth-child(2) {
-    border: 0;
-  }
-  .count-wrap:nth-child(2),
-  .count-wrap:nth-child(4) {
-    padding-left: 15px;
-  }
-}
-@media only screen and (max-width: 1024px) {
-  .count-wrap:nth-child(2),
-  .count-wrap:nth-child(4) {
-    width: 60%;
-  }
-  .count-wrap:nth-child(1),
-  .count-wrap:nth-child(3) {
-    width: 40%;
-  }
-  .album-delete-btn {
-    bottom: 10px;
-  }
-}
-@media only screen and (max-width: 991px) {
-  .AdminApp .page-wrap {
-    padding-top: 60px;
-  }
-  .AdminApp .custom-navbar .navbar-toggle {
-    border-color: #f9a11d;
-    margin-top: 25px;
-    margin-right: 30px;
-  }
-  .AdminApp .header .menu-links {
-    margin-top: 0;
-  }
-  .AdminApp .header .menu-links li.back-to-album a {
-    padding: 20px 5px;
-  }
-  .admin-page-title {
-    font-size: 24px;
-    height: 60px;
-    line-height: 60px;
-  }
-  .side-toggle-btn {
-    height: 60px;
-    width: 60px !important;
-    margin-right: 10px;
-  }
-  .AdminApp .header .menu-links li a {
-    padding: 16px 8px;
-  }
-  .search-wrap {
-    width: 150px;
-  }
-  .search-btn {
-    padding: 3px 6px;
-  }
-  .search-box {
-    padding: 6px;
-    font-size: 12px;
-  }
-  .sortBy {
-    margin-left: 10px;
-    margin-right: 10px;
-  }
-  .AdminApp .footer {
-    font-size: 10px;
-    line-height: 16px;
-  }
-}
-@media only screen and (max-width: 940px) {
-  .album-thumb {
-    height: 120px;
-    width: 120px;
-  }
-  .count-main-wrap {
-    width: 100%;
-    margin-left: 0px;
-    margin-top: 10px;
-  }
-  .album-separator {
-    display: none;
-  }
-  .admin-page-title {
-    font-size: 22px;
-  }
-}
-@media only screen and (max-width: 767px) {
-  .AdminApp .header .navbar-toggle {
-    display: block;
-    border-color: #f9a11d;
-    margin-top: 25px;
-    margin-right: 0px;
-    margin-bottom: 0;
-  }
-  .AdminApp .header .navbar-toggle:focus,
-  .AdminApp .header .navbar-toggle:hover {
-    background-color: transparent;
-  }
-  .navbar-default .navbar-toggle .icon-bar {
-    background-color: #f9a11d !important;
-  }
-  .AdminApp .header .admin-setting ul {
-    margin-top: 5px !important;
-  }
-  .AdminApp .header .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
-    color: #9d9d9d !important;
-    padding: 8px;
-  }
-  .AdminApp .header .menu-links li.back-to-album a {
-    padding: 15px 30px 0;
-  }
-  .AdminApp .header .navbar-collapse {
-    border-top: 2px solid #f1f1f1;
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
-  }
-  .AdminApp .header .navbar-toggle {
-    margin-right: 20px;
-    margin-top: 13px;
-  }
-  .admin-page-title {
-    font-size: 24px;
-    line-height: 64px;
-  }
-  .AdminApp .menu-links {
-    margin-top: 0;
-  }
-  .setting-dropdown-wrap {
-    float: left;
-    position: relative;
-    width: 100%;
-    width: 86px;
-  }
-  .setting-dropdown-wrap i {
-    line-height: 20px;
-  }
-  .setting-dropdown-wrap img {
-    float: left;
-    position: relative;
-  }
-
-  .setting-label {
-    float: left;
-    position: relative;
-    margin-left: 0px;
-    margin-right: 10px;
-    color: #777;
-  }
-  .AdminApp .header .menu-links li a .caret {
-    float: left;
-    margin-top: 8px !important;
-  }
-
-  .AdminApp {
-    overflow-x: hidden;
-  }
-  .AdminApp .header,
-  .AdminApp .page-wrap,
-  .AdminApp .footer {
-    width: 100vw !important;
-  }
-  .search-wrap {
-    width: 100%;
-    position: relative;
-    float: left;
-    padding: 5px 30px;
-    margin-top: 0;
-  }
-  .search-Form {
-    position: relative;
-    width: 100%;
-    top: 5px;
-    border-radius: 0;
-  }
-  .search-Form .well {
-    margin-bottom: 0px;
-  }
-  .admin-setting {
-    position: relative;
-    float: left;
-    width: 100%;
-    padding: 0 25px;
-  }
-  .AdminApp .footer {
-    padding: 8px 0;
-  }
-}
-@media only screen and (max-width: 540px) {
-  .album-img-wrap {
-    position: relative;
-    float: left;
-    width: 100%;
-  }
-  .album-detail-wrap {
-    position: relative;
-    float: left;
-    width: 100%;
-    padding-left: 0;
-    margin-top: 15px;
-  }
-  .album-share-btn,
-  .album-edit-btn {
-    top: 0;
-  }
-  .album-share-btn {
-    right: 0;
-  }
-  .album-edit-btn {
-    right: 30px;
-  }
-  .album-thumb {
-    width: 60%;
-    /*margin-left: 20%;*/
-    height: auto;
-  }
-  .album-title {
-    font-size: 14px;
-    line-height: 20px;
-  }
-  .count-main-wrap {
-    margin-top: 5px;
-  }
-  .count-wrap {
-    width: 100% !important;
-    padding-left: 0 !important;
-    border: 0;
-    margin-top: 3px;
-  }
-  .album-delete-btn {
-    bottom: 0px;
-  }
-  .total-album {
-    width: 25%;
-  }
-  .total-album,
-  .sortBy {
-    width: auto;
-    padding: 0;
-    margin: 10px 0 0;
-    border: 0;
-  }
-  .sortBy {
-    text-align: right;
-  }
-  .lock-icon {
-    top: 12px;
-    left: 12px;
-    right: none;
-  }
-  .count-detail {
-    min-width: 140px;
-    text-align: left;
-  }
-  .count-num {
-    font-size: 14px;
-  }
-  .album-badges-wrap {
-    padding: 10px 0;
-  }
-}
-@media only screen and (max-width: 480px) {
-  .album-thumb {
-    width: 100%;
-    margin-left: 0;
-    height: auto;
-  }
-  .create-album-btn {
-    width: 65%;
-    margin-left: 20%;
-    float: none !important;
-  }
-  .side-toggle-btn {
-    margin-right: 10px;
-  }
-  .right-wrapper {
-    float: left !important;
-  }
-  .total-album {
-    width: 100%;
-  }
-  .sortBy {
-    width: 100%;
-    float: left;
-    text-align: left;
-    margin: 15px 0;
-  }
-  .create-album-btn {
-    margin: 0;
-  }
-  .count-detail {
-    min-width: 120px;
-    font-size: 12px;
-  }
-}
-@media only screen and (max-width: 460px) {
-}
-@media only screen and (max-width: 420px) {
-  .create-album-btn {
-    width: 80%;
-    margin-left: 0;
-  }
-}
-@media only screen and (max-width: 360px) {
-  .album-wrap {
-    padding: 15px;
-  }
-  .admin-page-title {
-    font-size: 18px;
-  }
-  .count-detail {
-    font-size: 12px;
-    min-width: 110px;
-  }
-  .count-detail.count-num {
-    width: auto !important;
-  }
 }
