--- a/src/assets/css/portfolio.css
+++ b/src/assets/css/portfolio.css
@@ -2,7 +2,6 @@
     padding-top: 92px;
     padding-bottom: 60px;
 }
-
 .portfolio-custom-tabs {
   width: 84%;
   margin-left: 7%;
@@ -38,7 +37,8 @@
     text-align:center;
 }
 .portfolio-content{
-    padding-bottom:50px;
+    padding:15px 15px 50px;
+
 }
 .portfolio-thumbs > img{
     width: 100%;
@@ -82,7 +82,7 @@
     top: 0;
     left: 0;
     background: rgba(0,0,0,0.7);
-    z-index:1;
+    z-index:0;
 }
 .portfolio-thumbs:hover .overlay{
     display: block;
@@ -124,7 +124,7 @@
   position: absolute;
   left: 0;
   bottom: 0;
-  z-index: 2;
+  z-index: 0;
   background: rgba(249, 161, 29, 0.9);
   color: #fff;
   text-align: center;
@@ -201,4 +201,25 @@
     margin: 0;
     min-height: 45px;
 }
-
+.back-album-wrap{
+    position: relative;
+}
+.back-link {
+    color: #666;
+    text-decoration: underline;
+    font-weight: bold;
+}
+.back-link:hover,
+.back-link:focus{
+    color: #666;    
+}
+.back-link .fa {
+    margin-right: 10px;
+    color: #999;
+}
+.photo-count-detail {
+    font-size: 14px;
+    color: #666;
+    font-weight: bold;
+    text-align: right;
+  }
