add comment in development css

--- a/public/assets/css/developer.css
+++ b/public/assets/css/developer.css
@@ -722,4 +722,4 @@ div.filepicker {
   color: #fd6257;
   font-family: 'ralewaysemibold';
 }
-/* start for about us detail end */
+/* end for about us detail title */
