--- a/public/assets/css/developer.css
+++ b/public/assets/css/developer.css
@@ -727,3 +727,36 @@ div.filepicker {
   font-family: 'ralewaysemibold';
 }
 /* end for about us detail title */
+/* start album detail page css  */
+.total-photo-count {
+  margin-top: 6px;
+  margin-right: 15px;
+}
+.total-photo-img {
+  margin-top: 9px;
+  margin-right: 8px;
+}
+.private-album {
+  background-color: #ff0000;
+  float: left;
+  color: white;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 10px;
+  font-weight: bold;
+  margin-top: 9px;
+}
+.public-album {
+  background-color: #1faf1f;
+  float: left;
+  color: white;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 10px;
+  font-weight: bold;
+  margin-top: 9px;
+}
+/* end album detail page css  */
+.custom-form-control {
+  font-size: 14px !important;
+}
