changes in css and add new class

--- a/public/assets/css/developer.css
+++ b/public/assets/css/developer.css
@@ -814,7 +814,7 @@ div.filepicker {
 .custom-form-control {
   font-size: 14px !important;
 }
-.Select {
+.album-sorting-option {
   display: inline-block;
   min-width: 200px;
   float: left;
