--- a/public/assets/css/developer.css
+++ b/public/assets/css/developer.css
@@ -820,6 +820,25 @@ div.filepicker {
   float: left;
   margin-right: 10px;
 }
+/* start Share Album page */
+.manage-selection-title,
+.manage-selection-title:hover {
+  color: white;
+}
+.allowed-comment-margin {
+  margin-left: 15px;
+}
+.allow-selection-margin {
+  margin-left: 2px;
+}
+.min-selected-photo-width {
+  width: 62%;
+  display: unset;
+}
+.share-album-align {
+  text-align: center;
+}
+/* end Share Album page */
 @media only screen and (max-width: 680px) {
   .private-album,
   .public-album,
