task-2-3-4-in-video-file

--- a/public/assets/css/developer.css
+++ b/public/assets/css/developer.css
@@ -387,6 +387,9 @@ div.filepicker {
 .video-edit-btn {
   right: 20px !important;
 }
+.remove-video-border{
+  border-right: none !important;
+}
 /* admin video page css end */
 
 /* album detail page css start */
@@ -924,4 +927,28 @@ div.filepicker {
     display: block;
     margin-bottom: 15px;
   }
+}
+
+/* ============================================== */
+.gu-mirror {
+  position: fixed !important;
+  margin: 0 !important;
+  z-index: 9999 !important;
+  opacity: 0.8;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+  filter: alpha(opacity=80);
+}
+.gu-hide {
+  display: none !important;
+}
+.gu-unselectable {
+  -webkit-user-select: none !important;
+  -moz-user-select: none !important;
+  -ms-user-select: none !important;
+  user-select: none !important;
+}
+.gu-transit {
+  opacity: 0.2;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
+  filter: alpha(opacity=20);
 }
