set the filter for album based on categories

--- a/public/assets/css/developer.css
+++ b/public/assets/css/developer.css
@@ -828,6 +828,7 @@ div.filepicker {
   min-width: 200px;
   float: left;
   margin-right: 10px;
+  z-index: 999;
 }
 /* Dropdown Settings menu start  */
 .watermark-content-img {
