--- a/public/assets/css/developer.css
+++ b/public/assets/css/developer.css
@@ -646,7 +646,7 @@ div.filepicker {
 /* end video Listing page */
 .admin-login-side .input-error {
   color: #f9a11d !important;
-  margin: 23% !important;
+  /* margin: 23% !important; */
 }
 
 /* Comment popup page css start */
