--- a/src/assets/css/nprogress.css
+++ b/src/assets/css/nprogress.css
@@ -34,8 +34,8 @@
   height: 18px;
   box-sizing: border-box;
   border: solid 2px transparent;
-  border-top-color: #f9a11d;
-  border-left-color: #f9a11d;
+  border-top-color: grey;
+  border-left-color: grey;
   border-radius: 50%;
   -webkit-animation: nprogress-spinner 400ms linear infinite;
   animation: nprogress-spinner 400ms linear infinite;
