--- a/public/assets/css/developer.css
+++ b/public/assets/css/developer.css
@@ -962,6 +962,37 @@ div.filepicker {
 }
 /* after super admin login user page css end */
 
+/* dashboard page css start */
+.lets-do-btn{
+  background: blue;
+  margin-left: 20px;
+}
+.lets-do-btn:hover{
+  background: blue;
+}
+.rounded-checkbox input[type="checkbox"]{
+  width: 1.3em;
+  height: 1.3em;
+  background-color: white;
+  border-radius: 50%;
+  vertical-align: middle;
+  border: 1px solid #ddd;
+  -webkit-appearance: none;
+  outline: none;
+  cursor: pointer;
+}
+.rounded-checkbox input[type="checkbox"]:checked{
+  background-color: gray;
+}
+.rounded-checkbox .checkbox-heading{
+  margin-left: 20px;
+}
+.album-management-completeness{
+  margin-left: 38px;
+}
+
+/* dashboard page css end */
+
 @media only screen and (max-width: 680px) {
   .private-album,
   .public-album,
