dashboard profile completeness

--- a/public/assets/css/developer.css
+++ b/public/assets/css/developer.css
@@ -630,6 +630,7 @@ div.filepicker {
 }
 .album-status-checkboxes label {
   font-size: 14px;
+  display: block;
 }
 .cancel-dropzone-btn{
   margin-left: 20px;
@@ -993,6 +994,32 @@ div.filepicker {
 
 /* dashboard page css end */
 
+
+
+/* ============================================== */
+.gu-mirror {
+  position: fixed !important;
+  margin: 0 !important;
+  z-index: 9999 !important;
+  opacity: 0.8;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+  filter: alpha(opacity=80);
+}
+.gu-hide {
+  display: none !important;
+}
+.gu-unselectable {
+  -webkit-user-select: none !important;
+  -moz-user-select: none !important;
+  -ms-user-select: none !important;
+  user-select: none !important;
+}
+.gu-transit {
+  opacity: 0.2;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
+  filter: alpha(opacity=20);
+}
+
 @media only screen and (max-width: 680px) {
   .private-album,
   .public-album,
@@ -1033,6 +1060,7 @@ div.filepicker {
   }
   /*---------------------------*/
 }
+
 @media only screen and (max-width: 420px) {
   .public-album,
   .private-album {
@@ -1047,28 +1075,4 @@ div.filepicker {
     display: block;
     margin-bottom: 15px;
   }
-}
-
-/* ============================================== */
-.gu-mirror {
-  position: fixed !important;
-  margin: 0 !important;
-  z-index: 9999 !important;
-  opacity: 0.8;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
-  filter: alpha(opacity=80);
-}
-.gu-hide {
-  display: none !important;
-}
-.gu-unselectable {
-  -webkit-user-select: none !important;
-  -moz-user-select: none !important;
-  -ms-user-select: none !important;
-  user-select: none !important;
-}
-.gu-transit {
-  opacity: 0.2;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
-  filter: alpha(opacity=20);
 }
