changed progress bar color

--- a/src/assets/css/nprogress.css
+++ b/src/assets/css/nprogress.css
@@ -2,13 +2,14 @@
   pointer-events: none;
 }
 #nprogress .bar {
-  background: #f9a11d;
+  /* background: #f9a11d; */
+  background: #0066CC;
   position: fixed;
   z-index: 1031;
   top: 0;
   left: 0;
   width: 100%;
-  height: 2px;
+  height: 5px;
 }
 #nprogress .peg {
   display: block;
@@ -16,7 +17,7 @@
   right: 0px;
   width: 100px;
   height: 100%;
-  box-shadow: 0 0 10px #f9a11d, 0 0 5px #f9a11d;
+  box-shadow: 0 0 10px #0066CC, 0 0 5px #0066CC;
   opacity: 1;
   -webkit-transform: rotate(3deg) translate(0px, -4px);
   -ms-transform: rotate(3deg) translate(0px, -4px);
