put instruction text and change some css

--- a/public/assets/css/developer.css
+++ b/public/assets/css/developer.css
@@ -994,6 +994,11 @@ div.filepicker {
 .album-management-completeness{
   margin-left: 38px;
 }
+.profile-completeness-instruction-bar{
+  background: orange;
+  color: #fff;
+  padding: 10px;
+}
 
 /* dashboard page css end */
 
